@@ -28,6 +28,7 @@ import java.util.stream.Collectors;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import org.apache.cassandra.service.StorageService;
 import org.junit.Test;
 
 import com.datastax.driver.core.exceptions.QueryValidationException;
@@ -1097,5 +1098,21 @@ public class CustomIndexTest extends CQLTester
 
             };
         }
+    }
+
+    @Test
+    public void testApollo290() throws Throwable
+    {
+        schemaChange("CREATE KEYSPACE index_keyspace WITH replication = {'class': 'SimpleStrategy', 'replication_factor': '1'}");
+        createTable("CREATE TABLE %s (a int, b int, c int, d int, PRIMARY KEY (a, b))");
+        createIndex("CREATE CUSTOM INDEX myindex ON %s(c) USING 'org.apache.cassandra.index.internal.TableBackedCustomIndex'");
+
+        execute("INSERT INTO %s (a, b, c, d) VALUES (?, ?, ?, ?)", 0, 0, 0, 2);
+        execute("INSERT INTO %s (a, b, c, d) VALUES (?, ?, ?, ?)", 0, 1, 0, 1);
+        execute("INSERT INTO %s (a, b, c, d) VALUES (?, ?, ?, ?)", 0, 2, 0, 0);
+
+        // As reported in APOLLO-290, custom indexes that use a regular Cassandra table as the backing data store
+        // can cause duplicate hardlink errors when a snapshot is performed
+        StorageService.instance.takeSnapshot("sometag", KEYSPACE, "index_keyspace");
     }
 }
